# hello-django

./: README.md  pyproject.toml  requirements.txt
mysite/: settings.py
